# rssbox-android

./: .gitignore  Cargo.toml  Makefile  README.md  README.zh-CN.md  build.rs  shell.nix
.github/workflows/: action.yml
data/: rss-cn.opml  rss-en.opml  rss-list.opml  rss-valid-cn.json  rss-valid-en.json  top-rss-list-valid.json  top-rss-list.json
res/layout/: activity_main.xml
res/values/: colors.xml  styles.xml
res/values-night/: colors.xml  styles.xml
res/values-night-v31/: styles.xml
res/values-v31/: styles.xml
script/: .gitignore  parse-top-rss-list.py  send-rss-cn-to-remote.sh  send-rss-to-remote.sh  top-rss-list.json  top-rss-list.md
src/: desktop.rs  lib.rs  tool-gen-rss.rs  version.rs
src/config/: conf.rs  data.rs  mod.rs
src/db/: blacklist.rs  entry.rs  mod.rs  rss.rs  trash.rs
src/logic/: about.rs  cache.rs  clipboard.rs  entry.rs  find.rs  message.rs  mod.rs  ok_cancel_dialog.rs  rss.rs  setting.rs  util.rs
src/util/: crypto.rs  fs.rs  http.rs  mod.rs  number.rs  str.rs  time.rs  translator.rs
ui/: appwindow.slint  logic.slint  store.slint  theme.slint  translator.slint  util.slint
ui/base/: blanket.slint  brand.slint  btn.slint  center-layout.slint  dialog.slint  divider.slint  drawer.slint  elevated-btn.slint  float-btn.slint  head.slint  icon-btn.slint  icons-dialog.slint  input-bar.slint  label.slint  landing-page.slint  language-dialog.slint  link.slint  list-tile.slint  loading.slint  message.slint  news.slint  no-data.slint  no-message.slint  ok-cancel.slint  radio-btn.slint  setting-detail.slint  setting-entry.slint  slide-card.slint  slider.slint  tab-btn.slint  tag.slint  tip.slint  toast.slint  tool-tip.slint  txtedit.slint  widget.slint  widgets.slint
ui/panel/: footer.slint  header.slint  panel.slint
ui/panel/bodyer/: add.slint  favorite.slint  find.slint  panel.slint  rss.slint  setting.slint
win/: icon.rc  version.h
