[package]
name = "rssbox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
chrono = "0.4"
anyhow = "1.0"
webbrowser = "0.8"
serde_json = "1.0"
lazy_static = "1.4"
toml = "0.8"

# TODO, not available on android
clipboard = "0.5"

uuid = { version = "1.6", features = ["v4"] }
tokio = {version = "1.35", features = ["full"]}
serde = { version = "1.0", features = ["serde_derive"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
slint = "1.5"
env_logger = "0.10"
platform-dirs = "0.3"
reqwest = { version = "0.11", features = ["json", "socks"]}

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
slint = { version = "1.5", features = ["backend-android-activity-05"] }
reqwest = { version = "0.11", features = ["rustls-tls", "native-tls-vendored",  "json", "socks"]}

[build-dependencies]
cmd_lib = "1.9"
slint-build = "1.5"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.4"

[features]
default = []
desktop = []

[[bin]]
path="src/lib.rs"
name="rssbox"
required-features = [ "desktop" ]

[package.metadata.android]
package = "xyz.heng30.rssbox"
build_targets = [ "aarch64-linux-android" ]
resources = "./res"

[package.metadata.android.signing.debug]
path = "./debug.keystore"
keystore_password = "123456"

[package.metadata.android.signing.release]
path = "./release.keystore"
keystore_password = "123456"

[package.metadata.android.sdk]
min_sdk_version = 23
max_sdk_version = 29
target_sdk_version = 30

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"
max_sdk_version = 18

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
max_sdk_version = 18

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"
max_sdk_version = 18

[package.metadata.android.application]
label = "rssbox"
icon = "@mipmap/ic_launcher"
# theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"
