[package]
name = "rssbox"
version = "0.7.0"
edition = "2021"

[dependencies]
log = "0.4"
rss = "2.0"
md5 = "0.7"
toml = "0.8"
rand = "0.8"
chrono = "0.4"
anyhow = "1.0"
html2text = "0.6"
webbrowser = "0.8"
serde_json = "1.0"
lazy_static = "1.4"
atom_syndication = "0.12"

opml = { version = "1.1", optional = true }
uuid = { version = "1.6", features = ["v4"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["serde_derive"] }
clap = { version = "4.5", features = ["derive"], optional = true }
sqlx = { version = "=0.7.3", features = ["runtime-tokio", "sqlite"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
slint = "1.5"
clipboard = "0.5"
env_logger = "0.10"
platform-dirs = "0.3"
reqwest = { version = "0.11", features = ["json", "socks"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
terminal-clipboard = "0.4"
slint = { version = "1.5", features = ["backend-android-activity-05"] }
reqwest = { version = "0.11", features = [
  "rustls-tls",
  "native-tls-vendored",
  "json",
  "socks",
] }

[build-dependencies]
cmd_lib = "1.9"
slint-build = "1.5"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.4"

[features]
default = []
desktop = []
tool-gen-rss = ["dep:opml", "dep:clap"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
path = "src/desktop.rs"
name = "rssbox-desktop"
required-features = ["desktop"]

[[bin]]
path = "src/tool-gen-rss.rs"
name = "tool-gen-rss"
required-features = ["tool-gen-rss"]

[package.metadata.android]
package = "xyz.heng30.rssbox"
build_targets = ["aarch64-linux-android"]
resources = "./res"
strip = "strip"

[package.metadata.android.signing.dev]
path = "./keystore/debug.keystore"
keystore_password = "123456"

[package.metadata.android.signing.release]
path = "./keystore/release.keystore"
keystore_password = "123456"

[package.metadata.android.sdk]
min_sdk_version = 23
# max_sdk_version = 34
target_sdk_version = 32

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[package.metadata.android.application]
label = "rssbox"
icon = "@mipmap/ic_launcher"
# theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[package.metadata.android.application.activity]
launch_mode = "singleTop"
always_retain_task_state = true
