[package]
name = "rssbox"
version = "1.0.0"
edition = "2021"

[dependencies]
log = "0.4"
rss = "2.0"
md5 = "0.7"
toml = "0.8"
rand = "0.8"
slint = "1.7"
chrono = "0.4"
anyhow = "1.0"
html2text = "0.6"
webbrowser = "0.8"
serde_json = "1.0"
once_cell = "1.19"
atom_syndication = "0.12"

uuid = { version = "1.6", features = ["v4"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["serde_derive"] }
reqwest = { version = "0.11", features = ["json", "socks", "native-tls-vendored"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

opml = { version = "1.1", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
clipboard = "0.5"
env_logger = "0.10"
platform-dirs = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
terminal-clipboard = "0.4"

[build-dependencies]
cmd_lib = "1.9"
slint-build = "1.7"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.4"

[features]
default = ["slint/backend-android-activity-06"]
desktop = []
tool-gen-rss = ["dep:opml", "dep:clap"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
path = "src/desktop.rs"
name = "rssbox"
required-features = ["desktop"]

[[bin]]
path = "src/tool-gen-rss.rs"
name = "tool-gen-rss"
required-features = ["tool-gen-rss"]

[package.metadata.android]
package = "xyz.heng30.rssbox"
build_targets = ["aarch64-linux-android"]
resources = "./res"
strip = "strip"

[package.metadata.android.signing.dev]
path = "./keystore/debug.keystore"
keystore_password = "123456"

[package.metadata.android.signing.release]
path = "./keystore/release.keystore"
keystore_password = "123456"

[package.metadata.android.sdk]
min_sdk_version = 23
target_sdk_version = 32

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.WRITE_EXTERNAL_STORAGE"

[[package.metadata.android.uses_permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
theme = "@style/AppTheme"

[package.metadata.android.application.activity]
launch_mode = "singleTop"
orientation = "portrait"
always_retain_task_state = true
